plugins {
  id "base"
  id "java"
  id "com.gradleup.shadow" version "8.3.6"
}

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
}

test {
  useJUnitPlatform()
  testLogging {
    showStandardStreams = true
  }
}

ext.mainClass = "net.prominic.groovyls.GroovyLanguageServer"

tasks.build.dependsOn tasks.shadowJar

shadowJar {
  manifest {
    attributes "Main-Class": "net.prominic.groovyls.GroovyLanguageServer"
  }
}

repositories  {
  mavenCentral()
}

dependencies {
  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j:0.20.0"
  implementation "org.apache.groovy:groovy:5.1.1"
  implementation "com.google.code.gson:gson:2.13.1"
  implementation "io.github.classgraph:classgraph:4.8.179"
  testImplementation "org.junit.jupiter:junit-jupiter-api:5.11.4"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.11.4"
  testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.14.1"

  // Core Maven Resolver API and utilities
  implementation 'org.apache.maven.resolver:maven-resolver-api:1.9.18'
  implementation 'org.apache.maven.resolver:maven-resolver-spi:1.9.18'
  implementation 'org.apache.maven.resolver:maven-resolver-util:1.9.18'
  implementation 'org.apache.maven.resolver:maven-resolver-impl:1.9.18'
  
  // Connectors and Transports (Required to talk to HTTP repositories like Maven Central)
  implementation 'org.apache.maven.resolver:maven-resolver-connector-basic:1.9.18'
  implementation 'org.apache.maven.resolver:maven-resolver-transport-http:1.9.18'
  
  // The bridge provider that allows Resolver to understand Maven POM file layouts
  implementation 'org.apache.maven:maven-resolver-provider:3.9.6'
}
